# rundeck-executions-cleanup

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
fixtures/cassettes/: test_bulk_delete_executions  test_get_executions_for_job  test_get_job_ids
rundeck_executions_cleanup/: __init__.py  __main__.py  rundeck_api.py
tests/: test_cli.py  test_rundeck_api.py  test_rundeck_logs_cleanup.py
tests/fixtures/cassettes/: test_delete_execution  test_get_executions_for_project_with_date_filter  test_get_projects
